--- a/WPF/View/emps.xaml
+++ b/WPF/View/emps.xaml
@@ -12,9 +12,9 @@
         <local:BoolToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
     </Page.Resources>
 
-    <Page.DataContext>
+    <!--<Page.DataContext>
         <local:empsViewModel></local:empsViewModel>
-    </Page.DataContext>
+    </Page.DataContext>-->
     <Grid ShowGridLines="True">
         <Grid.RowDefinitions>
             <RowDefinition Height="80"/>
@@ -28,7 +28,17 @@
         <Grid Grid.Row="1" >
             <DataGrid SelectedValue="{Binding Selected,Mode=TwoWay}"  CanUserAddRows="False" ScrollViewer.CanContentScroll="True"  AutoGenerateColumns="False" x:Name="empGrid" HorizontalAlignment="Left" ItemsSource = "{Binding Path=EntityList, Mode=OneWay}" SelectionChanged="empGrid_SelectionChanged" SizeChanged="empGrid_SizeChanged">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Binding="{Binding LastName}" Header="Фамилия" Width="auto" />
+                    <DataGridTemplateColumn Header="Фамилия"  Width="auto">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock>
+                                    <Hyperlink Command="{Binding DataContext.Select, RelativeSource={RelativeSource AncestorType={x:Type Page}}}" >
+                                         <TextBlock Text="{Binding LastName}" />
+                                    </Hyperlink>
+                                </TextBlock>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
                     <DataGridTextColumn Binding="{Binding Name}" Header="Имя" Width="Auto" />
                     <DataGridTextColumn Binding="{Binding SName}" Header="Отчество" Width="Auto" />
                     <DataGridTextColumn Binding="{Binding Pos.Name}" Header="Должность" Width="*" />
