--- a/WPF/View/comps.xaml
+++ b/WPF/View/comps.xaml
@@ -1,16 +1,18 @@
-﻿<Page x:Class="WPF.View.deps"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPF.ViewModels"
-        xmlns:root="clr-namespace:WPF"
-        mc:Ignorable="d"
-        Title="MainWindow"  Background="White" KeepAlive="{Binding EditMode}">
+﻿<Page x:Class="WPF.View.comps"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:WPF.View"
+      xmlns:root="clr-namespace:WPF"
+      mc:Ignorable="d" 
+      d:DesignHeight="300" d:DesignWidth="300"
+      Title="comp" Background="White" KeepAlive="{Binding EditMode}">
 
     <Page.Resources>
         <root:BoolToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
     </Page.Resources>
+
 
     <Grid ShowGridLines="True">
         <Grid.RowDefinitions>
@@ -37,12 +39,10 @@
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
-                    <DataGridTextColumn Binding="{Binding Name}" Header="Наименование" Width="Auto" />
+                    <DataGridTextColumn Binding="{Binding NetName}" Header="NetName" Width="Auto" />
                 </DataGrid.Columns>
             </DataGrid>
-
         </Grid>
-
         <Border Grid.Row="2" x:Name="EditForm" Visibility="{Binding EditMode, Converter={StaticResource BooleanToVisibilityConverter}}">
             <Grid Margin="5" DataContext="{Binding ElementName=empGrid, Path=SelectedItem}">
                 <Grid.RowDefinitions>
@@ -64,7 +64,7 @@
                     <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <TextBlock HorizontalAlignment="Right" Padding="5" Grid.Column="0" Grid.Row="0">Наименование</TextBlock>
-                <TextBox Padding="2" Margin="5" Grid.Column="1" Grid.Row="0" Text="{Binding Path=Name}"></TextBox>
+                <TextBox Padding="2" Margin="5" Grid.Column="1" Grid.Row="0" Text="{Binding Path=NetName}"></TextBox>
             </Grid>
         </Border>
 
@@ -74,7 +74,5 @@
             <Button x:Name="Deletebutton" Content="Удалить" HorizontalAlignment="Left" Height="31" Width="100" Command="{Binding Delete}" CommandParameter= "{Binding ElementName=empGrid, Path=SelectedItem}"/>
             <Button x:Name="Cancelbutton" Content="Отменить" HorizontalAlignment="Left" Height="31" Width="100" Command="{Binding Cancel}" CommandParameter= "{Binding ElementName=empGrid, Path=SelectedItem}"/>
         </StackPanel>
-
-
     </Grid>
 </Page>
